--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply font-bold tracking-tight text-6xl mb-2;
+  }
+  h2 {
+    @apply mb-2 text-violet-900 font-extrabold text-xl;
+  }
+  h3 {
+    @apply text-lg font-bold text-gray-700 mb-3;
+  }
+  p {
+    @apply mb-4 text-gray-700;
+  }
+}
