--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,15 @@
 
 @layer base {
   h1 {
-    @apply font-bold tracking-tight text-6xl mb-2;
+    @apply font-bold tracking-tight text-4xl mb-2;
   }
   h2 {
-    @apply mb-2 text-violet-900 font-extrabold text-xl;
+    @apply mb-2 text-violet-900 font-extrabold text-xl font-mono;
   }
   h3 {
-    @apply text-lg font-bold text-gray-700 mb-3;
+    @apply text-lg font-bold text-gray-700 mb-3 font-mono;
   }
   p {
-    @apply mb-4 text-gray-700;
+    @apply mb-4 text-gray-700 text-lg;
   }
 }
